--- a/PythonGuru/app/src/main/res/layout/activity_lessons.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_lessons.xml
@@ -22,8 +22,8 @@
             android:layout_height="wrap_content"
             android:id="@+id/lesson1" android:layout_marginTop="156dp"
             app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="56dp" android:textColor="@android:color/white"
-            android:background="@color/colorPrimary"/>
+            android:layout_marginStart="72dp" android:textColor="@android:color/white"
+            android:background="@color/colorPrimary" app:layout_constraintBottom_toTopOf="@+id/lesson4"/>
     <Button
             android:text="@string/lesson_2"
             android:layout_width="wrap_content"
@@ -31,41 +31,47 @@
             android:id="@+id/lesson2" app:layout_constraintStart_toEndOf="@+id/lesson1"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginTop="156dp" app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintHorizontal_bias="0.656" android:background="@color/colorPrimary"
-            android:textColor="@android:color/white"/>
-    <Button
-            android:text="@string/lesson_4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/lesson3" android:layout_marginTop="72dp"
-            app:layout_constraintTop_toBottomOf="@+id/lesson1" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="56dp" android:textColor="@android:color/white"
-            android:background="@color/colorPrimary"/>
-    <Button
-            android:text="@string/lesson_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/lesson4" app:layout_constraintStart_toEndOf="@+id/lesson3"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginTop="72dp" app:layout_constraintTop_toBottomOf="@+id/lesson2"
-            app:layout_constraintHorizontal_bias="0.656" android:background="@color/colorPrimary"
-            android:textColor="@android:color/white"/>
+            app:layout_constraintHorizontal_bias="0.5" android:background="@color/colorPrimary"
+            android:textColor="@android:color/white" app:layout_constraintBottom_toTopOf="@+id/lesson3"/>
     <Button
             android:text="@string/lesson_5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/lesson5" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/lesson3" android:layout_marginBottom="8dp"
+            android:id="@+id/lesson5"
+            android:layout_marginBottom="296dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="56dp" app:layout_constraintVertical_bias="0.201"
-            android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            android:layout_marginStart="72dp"
+            android:background="@color/colorPrimary" android:textColor="@android:color/white"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lesson4"
+    />
     <Button
             android:text="@string/lesson_6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/lesson6" android:layout_marginTop="76dp"
-            app:layout_constraintTop_toBottomOf="@+id/lesson4" app:layout_constraintStart_toEndOf="@+id/lesson5"
+            android:id="@+id/lesson6"
+            app:layout_constraintStart_toEndOf="@+id/lesson5"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.656" android:background="@color/colorPrimary"
-            android:textColor="@android:color/white"/>
+            app:layout_constraintHorizontal_bias="0.5" android:background="@color/colorPrimary"
+            android:textColor="@android:color/white"
+            android:layout_marginBottom="296dp" app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/lesson3"/>
+    <Button
+            android:text="@string/lesson_4_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/lesson4" android:textColor="@android:color/white"
+            android:background="@color/colorPrimary" android:layout_marginTop="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/lesson1" android:layout_marginStart="72dp"
+            app:layout_constraintStart_toStartOf="parent"
+    />
+    <Button
+            android:text="@string/lesson_3_txt"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/lesson3" android:textColor="@android:color/white"
+            android:background="@color/colorPrimary" android:layout_marginTop="48dp"
+            app:layout_constraintTop_toBottomOf="@+id/lesson2" android:layout_marginEnd="8dp"
+            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toEndOf="@+id/lesson4"
+            android:layout_marginStart="8dp" app:layout_constraintHorizontal_bias="0.503"
+    />
 </android.support.constraint.ConstraintLayout>
