--- a/PythonGuru/app/src/main/res/layout/activity_progress.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_progress.xml
@@ -7,149 +7,156 @@
         android:layout_height="match_parent"
         tools:context=".ProgressActivity" android:background="@color/colorPrimaryDark">
 
-    <TextView
-            android:text="@string/your_progress"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/textView8" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.079"
-            android:textColor="@android:color/white"/>
-    <TextView
-            android:text="@string/mark_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/test1" android:layout_marginTop="160dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.156" android:textColor="@android:color/white"/>
-    <TextView
-            android:text="@string/mark_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/test2" android:layout_marginTop="56dp"
-            app:layout_constraintTop_toBottomOf="@+id/test1" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.156" android:textColor="@android:color/white"/>
-    <TextView
-            android:text="@string/mark_3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/test3"
-            android:layout_marginTop="52dp"
-            app:layout_constraintTop_toBottomOf="@+id/test2" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.156" android:textColor="@android:color/white"/>
-    <TextView
-            android:text="@string/mark_4"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/test4" android:layout_marginTop="60dp"
-            app:layout_constraintTop_toBottomOf="@+id/test3" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.156" android:textColor="@android:color/white"/>
-    <TextView
-            android:text="@string/mark_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/test5" android:layout_marginTop="60dp"
-            app:layout_constraintTop_toBottomOf="@+id/test4" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.156" android:textColor="@android:color/white"/>
-    <TextView
-            android:text="@string/mark_6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/test6" android:layout_marginTop="60dp"
-            app:layout_constraintTop_toBottomOf="@+id/test5" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.156" android:textColor="@android:color/white"/>
-    <TextView
-            android:text="@string/mark_7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/test7" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/test6" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintHorizontal_bias="0.166" app:layout_constraintVertical_bias="0.429"
-            android:textColor="@android:color/white"/>
-    <TextView
-            android:text="@string/comment_1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/comment1" android:layout_marginTop="188dp"
-            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.164" android:textColor="@android:color/white"
-            android:background="@color/colorPrimary"/>
-    <TextView
-            android:text="@string/comment_2"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/comment2" android:layout_marginTop="56dp"
-            app:layout_constraintTop_toBottomOf="@+id/comment1" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.164" android:textColor="@android:color/white"
-            android:background="@color/colorPrimary"/>
-    <TextView
-            android:text="@string/comment_4"
-            android:layout_width="69dp"
-            android:layout_height="16dp"
-            android:id="@+id/comment4"
-            app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.159" android:layout_marginTop="60dp"
-            app:layout_constraintTop_toBottomOf="@+id/comment3" android:textColor="@android:color/white"
-            android:background="@color/colorPrimary"/>
-    <TextView
-            android:text="@string/comment_5"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/comment5" android:layout_marginTop="64dp"
-            app:layout_constraintTop_toBottomOf="@+id/comment4" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.167" android:textColor="@android:color/white"
-            android:background="@color/colorPrimary"/>
-    <TextView
-            android:text="@string/comment_6"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/comment6" android:layout_marginTop="60dp"
-            app:layout_constraintTop_toBottomOf="@+id/comment5" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.164" android:textColor="@android:color/white"
-            android:background="@color/colorPrimary"/>
-    <TextView
-            android:text="@string/comment_7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/comment7" android:layout_marginTop="52dp"
-            app:layout_constraintTop_toBottomOf="@+id/comment6" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.164" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.25"
-            android:textColor="@android:color/white" android:background="@color/colorPrimary"/>
-    <TextView
-            android:text="@string/comment3"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/comment3" android:layout_marginTop="52dp"
-            app:layout_constraintTop_toBottomOf="@+id/comment2" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintHorizontal_bias="0.16" android:textColor="@android:color/white"
-            android:background="@color/colorPrimary"/>
-    <TextView
-            android:text="@string/marksColText"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/marksColumn"
-            android:textColor="@android:color/white" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
-            app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
-            app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.146"
-            app:layout_constraintVertical_bias="0.153"/>
+    <LinearLayout
+            android:orientation="vertical"
+            android:layout_width="385dp"
+            android:layout_height="565dp"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="8dp" android:layout_marginBottom="16dp"
+            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.2">
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView13"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView12"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView11"/>
+        <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" android:id="@+id/textView10"/>
+        <TextView
+                android:text="@string/your_progress"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/textView8" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintHorizontal_bias="0.498" app:layout_constraintVertical_bias="0.079"
+                android:textColor="@android:color/white"/>
+        <TextView
+                android:text="@string/marksColText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/marksColumn"
+                android:textColor="@android:color/white" android:layout_marginTop="8dp"
+                app:layout_constraintTop_toTopOf="parent" android:layout_marginStart="8dp"
+                app:layout_constraintStart_toStartOf="parent" android:layout_marginEnd="8dp"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="0.146"
+                app:layout_constraintVertical_bias="0.153"/>
+        <TextView
+                android:text="@string/mark_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/test1"
+                android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="160dp" tools:layout_editor_absoluteX="361dp"/>
+        <TextView
+                android:text="@string/comment_1"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/comment1"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary" tools:layout_editor_absoluteY="188dp"/>
+        <TextView
+                android:text="@string/mark_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/test2"
+                android:textColor="@android:color/white" tools:layout_editor_absoluteY="235dp"
+                tools:layout_editor_absoluteX="8dp"/>
+        <TextView
+                android:text="@string/comment_2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/comment2"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary" tools:layout_editor_absoluteY="263dp"
+                tools:layout_editor_absoluteX="338dp"/>
+        <TextView
+                android:text="@string/mark_3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/test3"
+                android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="305dp" tools:layout_editor_absoluteX="361dp"/>
+        <TextView
+                android:text="@string/comment3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/comment3"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary" tools:layout_editor_absoluteY="333dp"
+                tools:layout_editor_absoluteX="338dp"/>
+        <TextView
+                android:text="@string/mark_4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/test4"
+                android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="383dp" tools:layout_editor_absoluteX="361dp"/>
+        <TextView
+                android:text="@string/comment_4"
+                android:layout_width="69dp"
+                android:layout_height="16dp"
+                android:id="@+id/comment4"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary" tools:layout_editor_absoluteY="411dp"
+                tools:layout_editor_absoluteX="334dp"/>
+        <TextView
+                android:text="@string/mark_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/test5"
+                android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="461dp" tools:layout_editor_absoluteX="361dp"/>
+        <TextView
+                android:text="@string/comment_5"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/comment5"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary" tools:layout_editor_absoluteY="491dp"/>
+        <TextView
+                android:text="@string/mark_6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/test6"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:textColor="@android:color/white"
+                tools:layout_editor_absoluteY="539dp"/>
+        <TextView
+                android:text="@string/comment_6"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/comment6"
+                android:textColor="@android:color/white"
+                android:background="@color/colorPrimary" tools:layout_editor_absoluteY="569dp"
+                tools:layout_editor_absoluteX="8dp"/>
+        <TextView
+                android:text="@string/mark_7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/test7"
+                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
+                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
+                android:textColor="@android:color/white"/>
+        <TextView
+                android:text="@string/comment_7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/comment7"
+                app:layout_constraintStart_toStartOf="parent"
+                android:layout_marginStart="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                android:textColor="@android:color/white" android:background="@color/colorPrimary"/>
+    </LinearLayout>
 </android.support.constraint.ConstraintLayout>
