--- a/PythonGuru/app/src/main/res/layout/activity_quizzes.xml
+++ b/PythonGuru/app/src/main/res/layout/activity_quizzes.xml
@@ -18,14 +18,14 @@
             android:text="@string/test_1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="68dp"
+            android:id="@+id/quiz1" app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="68dp"
             android:layout_marginTop="180dp" app:layout_constraintTop_toTopOf="parent"
             android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
     <Button
             android:text="@string/test_2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button3" app:layout_constraintStart_toEndOf="@+id/button"
+            android:id="@+id/quiz2" app:layout_constraintStart_toEndOf="@+id/quiz1"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             android:layout_marginTop="180dp" app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintHorizontal_bias="0.543" android:background="@color/colorPrimary"
@@ -34,47 +34,54 @@
             android:text="@string/test_3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button4" android:layout_marginTop="84dp"
-            app:layout_constraintTop_toBottomOf="@+id/button" app:layout_constraintStart_toStartOf="parent"
+            android:id="@+id/quiz3"
+            app:layout_constraintStart_toStartOf="parent"
             android:layout_marginStart="68dp" android:background="@color/colorPrimary"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white" android:layout_marginTop="92dp"
+            app:layout_constraintTop_toBottomOf="@+id/quiz1"/>
     <Button
             android:text="@string/test_4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button5" android:layout_marginTop="84dp"
-            app:layout_constraintTop_toBottomOf="@+id/button3" app:layout_constraintStart_toEndOf="@+id/button4"
+            android:id="@+id/quiz4"
+            app:layout_constraintStart_toEndOf="@+id/quiz3"
             android:layout_marginStart="8dp" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
             app:layout_constraintHorizontal_bias="0.543" android:background="@color/colorPrimary"
-            android:textColor="@android:color/white"/>
+            android:textColor="@android:color/white" android:layout_marginTop="92dp"
+            app:layout_constraintTop_toBottomOf="@+id/quiz2"/>
     <Button
             android:text="@string/test_5"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button6" android:layout_marginTop="88dp"
-            app:layout_constraintTop_toBottomOf="@+id/button4" app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginStart="68dp" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.0"
-            android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            android:id="@+id/quiz5"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_marginStart="68dp" android:layout_marginBottom="232dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:background="@color/colorPrimary" android:textColor="@android:color/white"
+            android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/quiz3"
+            app:layout_constraintVertical_bias="1.0"/>
     <Button
             android:text="@string/test_6"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button7" android:layout_marginBottom="232dp"
+            android:id="@+id/quiz6" android:layout_marginBottom="232dp"
             app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/button6"
-            android:layout_marginStart="8dp" android:layout_marginTop="8dp"
-            app:layout_constraintTop_toBottomOf="@+id/button5" app:layout_constraintHorizontal_bias="0.543"
-            app:layout_constraintVertical_bias="0.963" android:background="@color/colorPrimary"
-            android:textColor="@android:color/white"/>
+            android:layout_marginEnd="8dp" app:layout_constraintStart_toEndOf="@+id/quiz5"
+            android:layout_marginStart="8dp"
+            app:layout_constraintHorizontal_bias="0.543"
+            android:background="@color/colorPrimary"
+            android:textColor="@android:color/white" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toBottomOf="@+id/quiz4" app:layout_constraintVertical_bias="1.0"/>
     <Button
             android:text="@string/final_test"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:id="@+id/button8" android:layout_marginTop="536dp"
-            app:layout_constraintTop_toBottomOf="@+id/textView6" android:layout_marginBottom="8dp"
-            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintVertical_bias="0.416"
+            android:id="@+id/quiz7"
+            android:layout_marginBottom="120dp"
+            app:layout_constraintBottom_toBottomOf="parent"
             android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="parent"
             android:layout_marginEnd="8dp" app:layout_constraintEnd_toEndOf="parent"
-            android:background="@color/colorPrimary" android:textColor="@android:color/white"/>
+            android:background="@color/colorPrimary" android:textColor="@android:color/white"
+            app:layout_constraintHorizontal_bias="0.498" android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="0.996"/>
 </android.support.constraint.ConstraintLayout>
